style(layout): set .main-content to overflow: visible to avoid nested scrolling and keep a single global scroll

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,7 +17,8 @@
   flex: 1;
   //overflow: hidden;
   position: relative;
-    overflow-y: auto; 
+   // overflow-y: auto; 
+    overflow: visible; 
   padding-bottom: 0; // El bottom nav es fijo
   
 }
